metadata-classic/objects/DisputeContent__c.object
<CustomObject>
    <description>Custom object to store meta data definitions of the content templates (e.g., tips, messages) used for the Solution Center.</description>
    <fields>
        <fullName>ArchiveDate__c</fullName>
        <description>The date the Dispute Content definition record status was set to &quot;Archived.&quot; Set via workflow.</description>
        <inlineHelpText>The date the Dispute Content definition record status was set to &quot;Archived.&quot; Set via workflow.</inlineHelpText>
        <label>Archive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MessageTemplate__c</fullName>
        <description>The template text of a success tip or message that will be created for the initiator or responder of a solution center dispute.</description>
        <inlineHelpText>The template text of a success tip or message that will be created for the initiator or responder of a solution center dispute.</inlineHelpText>
        <label>Message Template</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PublishDate__c</fullName>
        <description>The date the Dispute Content definition record status was set to &quot;Published.&quot; Set via workflow.</description>
        <inlineHelpText>The date the Dispute Content definition record status was set to &quot;Published.&quot; Set via workflow.</inlineHelpText>
        <label>Publish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RecordNumber__c</fullName>
        <description>Auto generated record number used for internal reference.</description>
        <displayFormat>DCT-{00000}</displayFormat>
        <inlineHelpText>Auto generated record number used for internal reference.</inlineHelpText>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Picklist whose values indicate the overall publication status of the Dispute Content record.</description>
        <inlineHelpText>Picklist whose values indicate the overall publication status of the Dispute Content record.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Needs approval</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>The title of the dispute content template; currently only being used for list views and content management.</description>
        <inlineHelpText>The title of the dispute content template; currently only being used for list views and content management.</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Field whose values describe the type of success tip content.</description>
        <inlineHelpText>Field whose values describe the type of success tip content.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Automated tip</fullName>
                </value>
                <value>
                    <fullName>Manual tip</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Dispute Content</label>
    <listViews>
        <fullName>PublishedDisputeContent</fullName>
        <columns>RecordNumber__c</columns>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Status__c</columns>
        <columns>MessageTemplate__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Published</value>
        </filters>
        <label>01. Published Dispute Content</label>
        <sharedTo>
            <group>SolutionCenterAdminUser</group>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dispute Content</pluralLabel>
    <recordTypes>
        <fullName>ContentTemplate</fullName>
        <active>true</active>
        <description>Record type used to manage the content of the Success Tips and Thumbtack Messages used in the Solution Center.</description>
        <label>Content Template</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>